[project]
name = "python-utilities"
version = "0.1.0"
description = "A collection of Python utilities for various tasks"
authors = [
    { name = "Andrew Moores", email = "andrew@moores.me" },
]
dependencies = [
    "keyring>=24.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-tmpfs>=0.1.0",
    "ruff>=0.3.0",
    "bandit>=1.7.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C90", # mccabe
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.isort]
known-first-party = ["python_utilities"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["src/python_utilities"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert warnings in tests 